Fix all Sonar lint errors